--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h3>Recipes:</h3>
 
     <ol>
-        <li><a href="./pages/tenders.html">Buffalo Chicken Tenders</a></li>
+        <li><a href="./pages/tenders.html">SpicyChicken Tenders</a></li>
         <li><a href="./pages/fries.html">Parmesan French Fries</a></li>
         <li><a href="./pages/ranch.html">Greek Yogurt Ranch</a></li>
     </ol>
